# cracker-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: main.py
src/args/: parser.py
src/cracker/: __main__.py  main.py
src/cracker/args/: parser.py
src/cracker/factory/: __init__.py
src/cracker/mainwindow/: __init__.py  mainwindow.py  task.py
src/cracker/parsers/: __init__.py  justfile.py  makefile.py  npm.py
src/cracker/runners/: __init__.py  justfile.py  makefile.py  npm.py
src/cracker/supported/: __init__.py
src/factory/: __init__.py
src/main_window/: actionlabel.py  app.tcss  mainwindow.py  task.py  taskgroup.py
src/parsers/: __init__.py  makefile.py
src/runner/: runner.py
src/runners/: __init__.py  makefile.py  npm.py
src/stopwatch/: stopwatch.tcss  stopwatch_app.py
src/supported/: __init__.py
